# personal-site

./: .gitignore  LICENSE  README.md  app.py  package.json  pyproject.toml  tailwind.config.js
blueprints/: bp_about.py  bp_main.py  bp_uploads.py
html/css/: main.css
html/templates/: about.jinja  contact.jinja  image.jinja  image.json  macros.jinja  main.jinja  main.json  projects.jinja
